--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
   "devDependencies": {
     "@nestjs/testing": "6.5.3",
     "@types/express": "4.17.1",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.3",
     "@types/node": "12.7.2",
+    "@types/password-hash-and-salt": "^0.1.0",
     "@types/supertest": "2.0.8",
     "jest": "^26.6.3",
     "prettier": "1.18.2",
